--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,80 @@
-version: '3.1'
-
+version: "3.3"
 services:
-  jupyter:
-    image: quay.io/jupyter/datascience-notebook:2024-12-23
+  db:
     restart: always
-    container_name: jupyter
+    image: postgres
+    container_name: mlflow_db
+    expose:
+      - "5432"
+    networks:
+      - backend
+    environment:
+      - POSTGRES_USER=${PG_USER}
+      - POSTGRES_PASSWORD=${PG_PASSWORD}
+      - POSTGRES_DATABASE=${PG_DATABASE}
     volumes:
-      - jupyter-data:/home/jovyan/work
+      - ./db_data:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD", "pg_isready", "-p", "5432", "-U", "mlflow"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+
+  s3:
+    restart: on-failure
+    image: minio/minio
+    container_name: mlflow_minio
     ports:
-      - "8888:8888"
+      - "9000:9000"
+      - "9001:9001"
+    networks:
+    - frontend
+    - backend
+    volumes:
+      - ./minio_data:/data
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_PORT: 9000
+      MINIO_ADDRESS: ':9000'
+      MINIO_CONSOLE_ADDRESS: ':9001'
+    command: server --console-address ":9001" /data
+
+  tracking_server:
+    restart: always
+    build: ./mlflow
+    image: mlflow_server
+    container_name: mlflow_server
+    depends_on:
+      - db
+    ports:
+      - "5001:5000"
+    networks:
+      - frontend
+      - backend
+    environment:
+      - AWS_ACCESS_KEY_ID=${MINIO_ACCESS_KEY}
+      - AWS_SECRET_ACCESS_KEY=${MINIO_SECRET_ACCESS_KEY}
+      - MLFLOW_S3_ENDPOINT_URL=http://s3:9000
+      - MLFLOW_S3_IGNORE_TLS=true
+    command: >
+      mlflow server
+      --backend-store-uri postgresql://mlflow:mlflow@db:5432/mlflow
+      --host 0.0.0.0
+      --serve-artifacts
+      --artifacts-destination s3://mlflow
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5001/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 volumes:
-  jupyter-data:
-    name: jupyter-data
+  db_data:
+  minio_data:
+
+networks:
+  frontend:
+    driver: bridge
+  backend:
+    driver: bridge
