--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ flake8 = "^7.1.1"
 interrogate = "^1.7.0"
 importchecker = "^3.0"
 bumpversion = "^0.6.0"
+pandas = "^2.2.3"
+scikit-learn = "^1.6.1"
 
 
 [build-system]
