Minio+Mlflow+Postgres

--- a/.env
+++ b/.env
@@ -7,16 +7,20 @@ PG_PORT=5432
 # MLflow configuration
 MLFLOW_PORT=5000
 MLFLOW_BUCKET_NAME=minio-bucket
-
-# MinIO access keys - these are needed by MLflow
-MINIO_ACCESS_KEY=4sVsIXRFVDO7twtnG8Yh
-MINIO_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
+MLFLOW_S3_ENDPOINT_URL=http://s3:9000
+MLFLOW_S3_IGNORE_TLS=true
+AWS_ACCESS_KEY_ID=suhI5jiCIPFbBzXl87Ps
+AWS_SECRET_ACCESS_KEY=jEomvpNTOT0qxkOZIZh9keMfQWSK4voRSJ0Pqnuz
 
 # MinIO configuration
-MINIO_ROOT_USER='minio'
-MINIO_ROOT_PASSWORD='minio123'
+MINIO_ROOT_USER='minio_user'
+MINIO_ROOT_PASSWORD='minio_user123'
 MINIO_ADDRESS=':9000'
 MINIO_STORAGE_USE_HTTPS=False
 MINIO_CONSOLE_ADDRESS=':9001'
 MINIO_PORT=9000
 MINIO_CONSOLE_PORT=9001
+
+# MinIO access keys - these are needed by MLflow
+MINIO_ACCESS_KEY=4sVsIXRFVDO7twtnG8Yh
+MINIO_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
