--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mlflow"
+name = "mlflow-at2"
 version = "1.0.0"
 description = "Mlflow tracker"
 authors = ["aexpedito <aexpedito@hotmail.com>"]
@@ -16,6 +16,10 @@ importchecker = "^3.0"
 bumpversion = "^0.6.0"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
+mlflow = "^2.19.0"
+ipykernel = "^6.29.5"
+kagglehub = "^0.3.6"
+tensorflow = "^2.18.0"
 
 
 [build-system]
