--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ PG_PORT=5432
 
 # MLflow configuration
 MLFLOW_PORT=5000
-MLFLOW_BUCKET_NAME=minio-bucket
+MLFLOW_BUCKET_NAME=mlflow
 MLFLOW_S3_ENDPOINT_URL=http://s3:9000
 MLFLOW_S3_IGNORE_TLS=true
-AWS_ACCESS_KEY_ID=suhI5jiCIPFbBzXl87Ps
-AWS_SECRET_ACCESS_KEY=jEomvpNTOT0qxkOZIZh9keMfQWSK4voRSJ0Pqnuz
+AWS_ACCESS_KEY_ID=4sVsIXRFVDO7twtnG8Yh
+AWS_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
 
 # MinIO configuration
 MINIO_ROOT_USER='minio_user'
@@ -24,3 +24,14 @@ MINIO_CONSOLE_PORT=9001
 # MinIO access keys - these are needed by MLflow
 MINIO_ACCESS_KEY=4sVsIXRFVDO7twtnG8Yh
 MINIO_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
+
+
+#API
+FLASK_APP=main.py
+FLASK_ENV=production
+FLASK_DEBUG=0
+FLASK_RUN_PORT=8081
+FLASK_RUN_HOST=0.0.0.0
+FLASK_TRACK_URI=http://tracking_server:5000
+FLASK_MODEL_NAME=linear_non_penalty_potability
+FLASK_MODEL_VER=1
