--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,6 +68,27 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+  
+  api:
+    build: ./api
+    image: api_rest
+    container_name: api_rest
+    depends_on:
+      - tracking_server
+    ports:
+      - "8081:8081"
+    networks:
+      - frontend
+    environment:
+      - FLASK_APP=${FLASK_APP}
+      - FLASK_ENV=${FLASK_ENV}
+      - FLASK_DEBUG=${FLASK_DEBUG}
+      - FLASK_RUN_PORT=${FLASK_RUN_PORT}
+      - FLASK_RUN_HOST=${FLASK_RUN_HOST}
+      - FLASK_TRACK_URI=${FLASK_TRACK_URI}
+      - FLASK_MODEL_NAME=${FLASK_MODEL_NAME}
+      - FLASK_MODEL_VER=${FLASK_MODEL_VER}
+    command: python main.py 8081
 
 volumes:
   db_data:
