Enabled ruff hooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,17 @@ tensorflow = "^2.18.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 88
+select = [
+    "F",  # pyflakes rules
+    "E",  # pycodestyle error rules
+    "W",  # pycodestyle warning rules
+    "B",  # flake8-bugbear rules
+    "I",  # isort rules
+]
+
+[tool.ruff.format]
+indent-style = "space"
+quote-style = "single"
