--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,24 @@ select = [
 [tool.ruff.format]
 indent-style = "space"
 quote-style = "single"
+
+
+
+[tool.numpydoc_validation]
+checks = [
+    "all",  # report on all checks
+    "ES01", # but don't require an extended summary
+    "EX01", # or examples
+    "SA01", # or a see also section
+    "SS06", # and don't require the summary to fit on one line
+]
+exclude = [  # don't report on checks for these
+    '\\.__init__$',
+    '\\.__repr__$',
+    '\\.__str__$',
+]
+override_SS05 = [  # allow docstrings to start with these words
+    '^Process ',
+    '^Assess ',
+    '^Access ',
+]
