Updated Mlflow project

--- a/myenv.env
+++ b/myenv.env
@@ -1,17 +1,24 @@
+#API
+FLASK_APP=main.py
+FLASK_ENV=production
+FLASK_DEBUG=0
+FLASK_RUN_PORT=8081
+FLASK_RUN_HOST='0.0.0.0'
+FLASK_TRACK_URI='http://tracking_server:5000'
+FLASK_MODEL_NAME=linear_non_penalty_potability
+FLASK_MODEL_VER=2
 # Postgres configuration
 PG_USER=mlflow
 PG_PASSWORD=mlflow
 PG_DATABASE=mlflow
 PG_PORT=5432
-
 # MLflow configuration
 MLFLOW_PORT=5000
 MLFLOW_BUCKET_NAME=mlflow
 MLFLOW_S3_ENDPOINT_URL=http://s3:9000
 MLFLOW_S3_IGNORE_TLS=true
-AWS_ACCESS_KEY_ID=4sVsIXRFVDO7twtnG8Yh
-AWS_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
-
+AWS_ACCESS_KEY_ID=PO801YOEPqPD5zQaby6d
+AWS_SECRET_ACCESS_KEY=fJwfltoIQbrXN9sGug2FEBaHaVNtgfLBCRgfmuT7
 # MinIO configuration
 MINIO_ROOT_USER='minio_user'
 MINIO_ROOT_PASSWORD='minio_user123'
@@ -20,18 +27,6 @@ MINIO_STORAGE_USE_HTTPS=False
 MINIO_CONSOLE_ADDRESS=':9001'
 MINIO_PORT=9000
 MINIO_CONSOLE_PORT=9001
-
 # MinIO access keys - these are needed by MLflow
-MINIO_ACCESS_KEY=4sVsIXRFVDO7twtnG8Yh
-MINIO_SECRET_ACCESS_KEY=to6HQb57yjDnU5WRP3ZKvN9ZSZ2vAmOPUEWw72f5
-
-
-#API
-FLASK_APP=main.py
-FLASK_ENV=production
-FLASK_DEBUG=0
-FLASK_RUN_PORT=8081
-FLASK_RUN_HOST=0.0.0.0
-FLASK_TRACK_URI=http://tracking_server:5000
-FLASK_MODEL_NAME=linear_non_penalty_potability
-FLASK_MODEL_VER=1
+MINIO_ACCESS_KEY=PO801YOEPqPD5zQaby6d
+MINIO_SECRET_ACCESS_KEY=fJwfltoIQbrXN9sGug2FEBaHaVNtgfLBCRgfmuT7
