--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,6 +9,9 @@ COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+ENV FLASK_APP=main.py
+
 EXPOSE 8081
 
-CMD ["python", "main.py", "8081"]
+#CMD ["python", "main.py", "8081"]
+ENTRYPOINT ["gunicorn", "-b", "0.0.0.0:8081", "-w", "2", "main:app"]
