--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -26,6 +26,7 @@ Flask==3.1.0
 fonttools==4.55.3
 gitdb==4.0.12
 GitPython==3.1.44
+gunicorn==22.0.0
 google-auth==2.37.0
 graphene==3.4.3
 graphql-core==3.2.5
